# email-format

./: Cargo.toml  README.md  index.html  search-index.js
buf_read_ext/: BufReadExt.t.html  index.html  trait.BufReadExt.html
email_format/: index.html  sidebar-items.js  struct.Email.html  trait.TryFrom.html
email_format/rfc5322/: Field.t.html  OptTraceBlock.t.html  ResentField.t.html  ResentTraceBlock.t.html  Streamable.t.html  TraceBlock.t.html  enum.Field.html  enum.ResentField.html  enum.TraceBlock.html  fn.is_text.html  index.html  is_text.v.html  sidebar-items.js  struct.Body.html  struct.Fields.html  struct.Message.html  struct.OptTraceBlock.html  struct.ResentTraceBlock.html  struct.Text.html  struct.Trace.html  trait.Parsable.html  trait.Streamable.html
email_format/rfc5322/error/: enum.ParseError.html  index.html
email_format/rfc5322/headers/: Bcc.t.html  Cc.t.html  InReplyTo.t.html  Keywords.t.html  MessageId.t.html  OptionalField.t.html  OrigDate.t.html  Received.t.html  ReceivedTokens.t.html  ReplyTo.t.html  ResentBcc.t.html  ResentCc.t.html  ResentDate.t.html  ResentFrom.t.html  ResentMessageId.t.html  ResentSender.t.html  ResentTo.t.html  To.t.html  enum.Bcc.html  enum.ReceivedTokens.html  enum.ResentBcc.html  index.html  sidebar-items.js  struct.Cc.html  struct.Comments.html  struct.From.html  struct.InReplyTo.html  struct.Keywords.html  struct.MessageId.html  struct.OptionalField.html  (+14 more)
src/: error.rs  lib.rs  tests.rs  types.rs
src/buf_read_ext/: lib.rs.html
src/email_format/: lib.rs.html
src/rfc5322/: email_address.rs  error.rs  headers.rs  mod.rs  types.rs
tests/: multipart.rs  unicode.rs.fails
(+134 files in other folders)
