[package]
name = "email-format"
version = "0.8.0"
description = "Email message format (parser and data structure)"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/email-format"
documentation = "https://mikedilger.github.io/email-format"
license = "MIT OR Apache-2.0"
keywords = [ "email", "rfc5322" ]

[features]
default = [ ]

[dependencies]
buf-read-ext = { version = "0.3", default-features = false }
time = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
lettre = { version = ">=0.9.2", optional = true }
